# mistral_inference_api

./: .env.example  .gitignore  README.md  pyproject.toml
mistral_inference_api/: mistral.py
