[tool.poetry]
name = "mistral-inference-api"
version = "0.1.0"
description = ""
authors = ["ivan golt <102701882+ivangolt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mistral_inference_api"}]

[tool.poetry.dependencies]
python = "^3.11"
mistralai = "^1.1.0"
gradio = "^4.44.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
